--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "8.0.2",
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
+    "react-router-dom": "^6.4.3",
     "sass": "^1.56.0"
   }
 }
