--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.5",
+    "react-loader-spinner": "^5.3.4",
+    "react-phone-number-input": "^3.2.13",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
