--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.14.0",
     "react": "18.2.0",
+    "react-creditcard-validator": "^1.0.6",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.5",
     "react-loader-spinner": "^5.3.4",
